swapping over to particle based move animations, fix some message issues